Added multi class sub desktop variants to Typography

--- a/style/_base.scss
+++ b/style/_base.scss
@@ -155,6 +155,17 @@ $font-weight-extra-bold: 900 !default;
 $font-family-primary: 'Roboto', sans-serif !default;
 $font-family-secondary: 'Barlow Condensed', sans-serif !default;
 
+$typography-title-large: 20px !default;
+$typography-title-medium: 18px !default;
+$typography-title-small: 16px !default;
+$typography-paragraph-large: 16px !default;
+$typography-paragraph-medium: 14px !default;
+$typography-paragraph-small: 12px !default;
+$typography-caption-large: 12px !default;
+$typography-caption-medium: 10px !default;
+$typography-caption-small: 8px !default;
+
+
 // Elevation
 $elevation-shadow-0: none;
 $elevation-shadow-1: 0px 3px 10px rgba(27, 78, 96, 0.2) !default;
