Improved the `NavDrawer` style and components

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -2768,7 +2768,6 @@ body {
 	&__item {
 		width: $drawer-item-width;
 		border-radius: 0 20px 20px 0;
-		height: 40px;
 		margin-bottom: 5px;
 		display: flex;
 		align-items: center;
@@ -2776,7 +2775,20 @@ body {
 		text-decoration: none;
 		padding-left: $base-unit-two;
 		cursor: pointer;
+		@include nonselectable;
 		@include transition;
+
+		&--small {
+			height: $row-height-small;
+		}
+		
+		&--medium {
+			height: $row-height-medium;
+		}
+		
+		&--large {
+			height: $row-height-large;
+		}
 
 		&:hover {
 			background-color: $secondary-color-light;
