fixed the CSS flow value of select item

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -671,7 +671,7 @@ body {
 		@include no-text-overflow;
 		display: flex;
 		flex-direction: row;
-		justify-content: start;
+		justify-content: flex-start;
 		align-items: center;
 		column-gap: $base-unit-half;
 
