--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -740,7 +740,7 @@ body {
 	z-index: 99;
 	background-color: rgba(0, 0, 0, 0.4);
 	@include center-by-flex-column;
-	
+
 	&--top {
 		justify-content: start;
 		padding-top: 10px
@@ -1468,25 +1468,26 @@ body {
 	$self: &;
 
 	&--keyboard-open {
-		
+
 		@include for-touch-device {
 			@media screen and (max-width: $tablet13LandscapeBreakPoint) {
 				max-height: 25vh;
-				
+
 				@include for-apple-touch-device {
 					max-height: 35vh;
 				}
 			}
-			
+
 			@media screen and (max-width: $mobileBreakPoint) {
 				max-height: 40vh;
 			}
+
 			overscroll-behavior: contain;
 
 			#{$self}__content {
 				overflow-y: scroll;
 				overscroll-behavior: contain;
-				
+
 				@media screen and (max-width: $tablet13LandscapeBreakPoint) {
 					max-height: calc(25vh - $row-height-medium - $row-height-medium);
 
@@ -1503,24 +1504,24 @@ body {
 			#{$self}__header {
 				height: $row-height-medium;
 			}
-			
+
 			#{$self}__footer {
 				height: $row-height-medium;
 			}
 		}
 	}
-	
-	
+
+
 	&__header {
 		border-bottom: 1px solid $neutral-color;
 		height: $row-height-medium;
 		padding: 0 $base-unit;
-		
+
 		@include for-touch-device {
 			height: $row-height-large;
 		}
 	}
-	
+
 	&__content {
 		max-height: calc(90vh - $row-height-medium - $row-height-large);
 		overflow-y: scroll;
@@ -1529,7 +1530,7 @@ body {
 			max-height: calc(80vh - $row-height-large - $row-height-large);
 		}
 	}
-	
+
 	&__footer {
 		height: $row-height-large;
 		border-top: 2px solid $neutral-color;
@@ -1537,12 +1538,12 @@ body {
 		justify-content: space-between;
 		align-items: center;
 		padding: 0 $base-unit;
-		
+
 		&__spacer {
 			&--left {
 				margin-left: auto;
 			}
-			
+
 			&--middle {
 				width: $base-unit-half;
 			}
@@ -1570,7 +1571,7 @@ body {
 		align-items: center;
 		padding: 0 $base-unit;
 		margin-top: 20px;
-		justify-content: space-between;		
+		justify-content: space-between;
 	}
 }
 
@@ -1590,7 +1591,7 @@ body {
 	}
 
 	&__header-row {
-		background-color: #f2f2f2;
+		background-color: $neutral-color;
 		display: grid;
 		border-top-left-radius: $base-unit-half;
 		border-top-right-radius: $base-unit-half;
@@ -1607,6 +1608,10 @@ body {
 			p {
 				margin: 0;
 			}
+		}
+
+		input[type=checkbox] {
+			border: 2px solid $secondary-color-normal;
 		}
 	}
 
@@ -1633,7 +1638,7 @@ body {
 
 		&--checked {
 			& {
-				background-color: $tertiary-color-light;
+				background-color: $secondary-color-light;
 			}
 		}
 	}
@@ -1868,7 +1873,7 @@ body {
 				background: $hover-color;
 				background-image: $hover-color;
 			}
-		}		
+		}
 
 		&__not-in-same-month {
 			color: gray;
@@ -1934,7 +1939,7 @@ body {
 				grid-template-rows: 33% 33% 34%;
 			}
 		}
-	}	
+	}
 
 	.vieolo-calendar-statefull-component {
 		position: absolute;
@@ -2311,72 +2316,57 @@ body {
 }
 
 .vieolo-checkbox {
-	width: 21px;
-	height: 21px;
-	position: relative;
-
-	&:focus {
-		outline: none;
-
-		input {
-			border: 1px solid $secondary-color-normal;
-		}
-	}
-
-	input,
-	svg {
-		width: 21px;
-		height: 21px;
-		display: block;
-	}
+	width: $base-unit-two;
+	height: $base-unit-two;		
 
 	input {
-		// -webkit-appearance: none;
-		// -moz-appearance: none;
-		position: relative;
+		-webkit-appearance: none;
+		-moz-appearance: none;
+		appearance: none;
+		height: $base-unit-two;
+		width: $base-unit-two;
 		outline: none;
-		background: white;
-		border: none;
+		display: inline-block;
+		vertical-align: top;
+		position: relative;
+		border: 2px solid $neutral-color;
 		margin: 0;
-		padding: 0;
 		cursor: pointer;
-		border-radius: 4px;
-		transition: box-shadow 0.3s;
-		box-shadow: inset 0 0 0 1px $primary-color-light;
+		background: transparent;
+		transition: background .3s, border-color .3s, box-shadow .2s;
+		border-radius: $base-unit-half;
 
-		&:hover {
-			box-shadow: inset 0 0 0 2px $primary-color-light;
+		&:focus {
+			outline: none;
+			box-shadow: 0px 0px 0px 3px $secondary-color-light;			
+		}
+
+		&::after {
+			content: '';
+			display: block;			
+			position: absolute;
+			transition: transform .3s ease, opacity .2s;			
+			width: $base-unit-half;
+			height: $base-unit;
+			border: 2px solid $neutral-color;
+			border-top: 0;
+			border-left: 0;
+			left: $base-unit-half;
+			top: 10%;
+			transform: rotate(20deg);				
+			opacity: 0;
 		}
 
 		&:checked {
-			box-shadow: inset 0 0 0 2px $primary-color-normal;
-			transition-delay: 0.2s;
+			background: $secondary-color-normal;
+			border: 2px solid $secondary-color-normal;
+			transition: transform .6s cubic-bezier(.2, .85, .32, 1.2), opacity .3s;
 
-			&+svg {
-				--a: 16.1 86.12;
-				--o: 102.22;
-				stroke-dasharray: 16.1 86.12;
-				stroke-dashoffset: 102.22;
+			&:after {
+				opacity: 1;
+				transform: rotate(43deg);				
 			}
 		}
-	}
-
-	svg {
-		pointer-events: none;
-		fill: none;
-		stroke-width: 2px;
-		stroke-linecap: round;
-		stroke-linejoin: round;
-		stroke: $primary-color-normal;
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 21px;
-		height: 21px;
-		transform: scale(1) translateZ(0);
-		stroke-dasharray: 86.12;
-		stroke-dashoffset: 86.12;
-		transition: stroke-dasharray 0.4s, stroke-dashoffset 0.4s;
 	}
 }
 
@@ -2793,11 +2783,11 @@ body {
 		&--small {
 			height: $row-height-small;
 		}
-		
+
 		&--medium {
 			height: $row-height-medium;
 		}
-		
+
 		&--large {
 			height: $row-height-large;
 		}
@@ -3124,27 +3114,27 @@ body {
 }
 
 .vieolo-image-picker {
-    position: relative;
-    border-radius: $border-radius-normal;
+	position: relative;
+	border-radius: $border-radius-normal;
 
-    $self: &;
+	$self: &;
 
-    &--full {
-        .vieolo-file-input {
-            position: absolute;
-            top:0;
-            left: 0;
-        }
+	&--full {
+		.vieolo-file-input {
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
 
-        img {
-            position: absolute;
-            top:0;
-            left: 0;
-            z-index: 2;
-            pointer-events: none;
-            border-radius: $border-radius-normal;
-        }        
-    }
+		img {
+			position: absolute;
+			top: 0;
+			left: 0;
+			z-index: 2;
+			pointer-events: none;
+			border-radius: $border-radius-normal;
+		}
+	}
 }
 
 .vieolo-tree-list-item {
