--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -73,25 +73,7 @@ body {
 		width: 100%;
 	}
 
-	&--border-radius-default {
-		border-radius: $border-radius-full;
-	}
-
-	&--border-radius-full {
-		border-radius: $border-radius-full;
-	}
-
-	&--border-radius-normal {
-		border-radius: $border-radius-normal;
-	}
-
-	&--border-radius-half {
-		border-radius: $border-radius-half;
-	}
-
-	&--border-radius-none {
-		border-radius: 0px;
-	}
+	@include borderRadiusMixin(border-radius, true, $border-radius-full);
 
 	span {
 		@include center-by-flex-row;
@@ -445,6 +427,16 @@ body {
 		outline: none;
 	}
 
+	&--large {
+		height: $row-height-large;
+		width: $row-height-large;
+
+		svg {
+			width: $row-height-small;
+			height: $row-height-small;
+		}
+	}
+	
 	&--medium {
 		height: $row-height-medium;
 		width: $row-height-medium;
