--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -532,10 +532,11 @@ body {
 			justify-content: center;
 			display: flex;
 			flex-flow: column;
-			width: 120px;
+			width: calc(100% - 30px);
 
 			&__button-title {
 				margin: 0;
+				@include no-text-overflow;
 			}
 
 			&__button-value {
