--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -103,8 +103,8 @@ body {
 	height: 30px;
 	line-height: 30px;
 	border-radius: $base-unit-half;
-	background-color: $neutral-color;
-	border: 2px solid $neutral-color;
+	background-color: $neutral-color-light;
+	border: 2px solid $neutral-color-light;
 	font-size: 14px;
 	box-sizing: border-box;
 	padding: 2px $base-unit-half;
@@ -126,8 +126,8 @@ body {
 	font-size: 13px;
 	border-radius: $base-unit-half;
 	height: 100px;
-	background-color: $neutral-color;
-	border: 2px solid $neutral-color;
+	background-color: $neutral-color-light;
+	border: 2px solid $neutral-color-light;
 
 	&:focus {
 		outline: none;
@@ -500,7 +500,7 @@ body {
 
 	&__select-button {
 		margin: 0 auto;
-		border: 2px solid $neutral-color;
+		border: 2px solid $neutral-color-light;
 		border-radius: $border-radius-half;
 		cursor: pointer;
 		@include flex-row-space-between;
@@ -620,7 +620,7 @@ body {
 			margin-bottom: $base-unit;
 			height: $row-height-medium;
 			border: none;
-			background-color: $neutral-color;
+			background-color: $neutral-color-light;
 			border-radius: $base-unit-half;
 			padding: 0 $base-unit;
 			font-size: 16px;
@@ -1506,7 +1506,7 @@ body {
 
 
 	&__header {
-		border-bottom: 1px solid $neutral-color;
+		border-bottom: 1px solid $neutral-color-light;
 		height: $row-height-medium;
 		padding: 0 $base-unit;
 
@@ -1526,7 +1526,7 @@ body {
 
 	&__footer {
 		height: $row-height-large;
-		border-top: 2px solid $neutral-color;
+		border-top: 2px solid $neutral-color-light;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
@@ -1589,7 +1589,7 @@ body {
 	}
 
 	&__header-row {
-		background-color: $neutral-color;
+		background-color: $neutral-color-light;
 		display: grid;
 		border-top-left-radius: $base-unit-half;
 		border-top-right-radius: $base-unit-half;
@@ -1609,7 +1609,7 @@ body {
 
 			&--sticky {
 				position: sticky;
-				background-color: $neutral-color;
+				background-color: $neutral-color-light;
 				border-radius: inherit;
 				z-index: 3;
 			}
@@ -1626,7 +1626,7 @@ body {
 
 	&__content-row {
 		display: grid;
-		border-bottom: 1px solid $neutral-color;
+		border-bottom: 1px solid $neutral-color-light;
 		min-width: fit-content;
 
 		&__cell {
@@ -1649,7 +1649,7 @@ body {
 			}
 
 			&--sticky-last {
-				border-right: 1px solid $neutral-color;
+				border-right: 1px solid $neutral-color-light;
 			}
 		}
 
@@ -2325,7 +2325,7 @@ body {
 		display: inline-block;
 		vertical-align: top;
 		position: relative;
-		border: 2px solid $neutral-color;
+		border: 2px solid $neutral-color-light;
 		margin: 0;
 		cursor: pointer;
 		background: transparent;
@@ -2343,7 +2343,7 @@ body {
 			transition: transform .3s ease, opacity .2s;
 			width: $base-unit-half;
 			height: $base-unit;
-			border: 2px solid $neutral-color;
+			border: 2px solid $neutral-color-light;
 			border-top: 0;
 			border-left: 0;
 			left: $base-unit-half;
