--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -1685,6 +1685,14 @@ body {
 	}
 }
 
+
+.vieolo-tab-row {
+	.vieolo-button {
+		white-space: nowrap;
+	}
+}
+
+
 .vieolo-tab-switch {
 	text-align: center;
 	margin-left: auto;
