Centralized the xl, lg, md, and sm breakpoint SCSS variables

--- a/style/_base.scss
+++ b/style/_base.scss
@@ -144,6 +144,10 @@ $drawer-width: 240px !default;
 $drawer-item-width: 220px !default;
 $navbar-height: $row-height-large !default;
 $subnavbar-height: $row-height-medium !default;
+$xlBreakPoint: $desktopBreakPoint !default;
+$lgBreakPoint: $laptop13BreakPoint !default;
+$mdBreakPoint: $tablet10LandscapeBreakPoint !default;
+$smBreakPoint: $mobileBreakPoint !default;
 
 
 // Fonts
