--- a/style/_general.scss
+++ b/style/_general.scss
@@ -20,9 +20,9 @@
 //	}
 @mixin interClassSubDesktopVariant($args...) {    
     $sizes: (
-        "lg": $laptop13BreakPoint,
-        "md": $tablet10LandscapeBreakPoint,
-        "sm": $mobileBreakPoint
+        "lg": $lgBreakPoint,
+        "md": $mdBreakPoint,
+        "sm": $smBreakPoint
     );
 
 	// The default state, applied to all sizes
@@ -52,9 +52,9 @@
 
 @mixin multiClassSubDesktopVariant($args...) {
     $sizes: (
-        "lg": $laptop13BreakPoint,
-        "md": $tablet10LandscapeBreakPoint,
-        "sm": $mobileBreakPoint
+        "lg": $lgBreakPoint,
+        "md": $mdBreakPoint,
+        "sm": $smBreakPoint
     );
     
     @each $cl, $con in meta.keywords($args) {
@@ -563,9 +563,9 @@
 	);
 
 	$sizes: (
-        "lg": $laptop13BreakPoint,
-        "md": $tablet10LandscapeBreakPoint,
-        "sm": $mobileBreakPoint
+        "lg": $lgBreakPoint,
+        "md": $mdBreakPoint,
+        "sm": $smBreakPoint
     );
 
 	$auxCols: (
@@ -626,9 +626,9 @@
 	);
 
 	$sizes: (
-        "lg": $laptop13BreakPoint,
-        "md": $tablet10LandscapeBreakPoint,
-        "sm": $mobileBreakPoint
+        "lg": $lgBreakPoint,
+        "md": $mdBreakPoint,
+        "sm": $smBreakPoint
     );
 
 	$auxCols: (
@@ -1878,10 +1878,10 @@ html {
 @mixin gridSpan($direction) {
 	$gso: ("xl", "lg", "md", "sm"); // Grid Size Options
 	$gsm: (
-		"xl": $desktopBreakPoint,
-		"lg": $laptop13BreakPoint,
-		"md": $tablet10LandscapeBreakPoint,
-		"sm": $mobileBreakPoint
+		"xl": $xlBreakPoint,
+		"lg": $lgBreakPoint,
+		"md": $mdBreakPoint,
+		"sm": $smBreakPoint
 	);
 	$gss: (0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12); // Grid Size Spans
 
