--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -2863,6 +2863,22 @@ body {
 .vieolo-sub-navbar-row {
 	height: $subnavbar-height;
 	background-color: $background-content-color;
+
+	&--elevation-default {
+		box-shadow: none;
+	}
+	
+	&--elevation-0 {
+		box-shadow: none;
+	}
+	
+	&--elevation-1 {
+		box-shadow: 0px 3px 10px -5px rgba(27, 78, 96, 0.2);
+	}
+
+	&--elevation-2 {
+		box-shadow: 0px 3px 10px -5px rgba(27, 78, 96, 0.5);
+	}
 }
 
 
