--- a/style/_general.scss
+++ b/style/_general.scss
@@ -2340,6 +2340,7 @@ html {
 			$center: (align-items: center),
 			$start: (align-items: flex-start),
 			$end: (align-items: flex-end),
+			$stretch: (align-items: stretch),
 		)
 	}	
 
